--- a/config.cfg
+++ b/config.cfg
@@ -5,7 +5,7 @@
 #adjust the database connection settings
 
 #Connection Settings for the Postgresql Database
-DB_HOST=freebsd
+DB_HOST=virtual
 DB_NAME=osm
 DB_USER=osm
 DB_PW=osm
